@@ -30,7 +30,7 @@ $postgreSQLRegexps['ContinuationLine'] = new RegExp("/^(\^I|\s)/");
 $postgreSQLRegexps['QueryStartPart'] = new RegExp("/^(query|statement):[\s]+/");
 $postgreSQLRegexps['StatusPart'] = new RegExp("/^(connection|received|unexpected EOF)/");
 $postgreSQLRegexps['DurationPart'] = new RegExp("/^duration:([\s\d\.]+)(sec|ms|us)/");
-$postgreSQLRegexps['PreparedStatementPart'] = new RegExp("/^(prepare|bind|execute) ([^:]*):[\s]+/");
+$postgreSQLRegexps['PreparedStatementPart'] = new RegExp("/^(prepare|bind|execute) ([^:( ]*)(?::[\s]+)?/i");
 
 // PostgreSQLStatusLine
 $postgreSQLRegexps['ConnectionReceived'] = new RegExp('/connection received: host=([^\s]+) port=([\d]+)/');
@@ -44,7 +44,9 @@ $postgreSQLRegexps['ContextSqlStatement'] = new RegExp('/^SQL statement "/');
 $postgreSQLRegexps['ContextSqlFunction'] = new RegExp('/([^\s]+)[\s]+function[\s]+"([^"]+)"(.*)$/');
 
 // PreparedStatement
-$postgreSQLRegexps['BindDetail'] = new RegExp('/(\$[0-9]+) = "(.*)"(?=(?:, \$[0-9]+ = |\z))/U');
+$postgreSQLRegexps['ExecuteDetail'] = new RegExp('/prepare: (.*)(?:\z|  \|  bind: (.*))$/Ui');
+$postgreSQLRegexps['RemovePreparePart']  = new RegExp('/^prepare [^ ]* as /i');
+$postgreSQLRegexps['BindParameters'] = new RegExp('/(\$[0-9]+) = (.*)(?=(?:, \$[0-9]+ = |\z))/U');
 
 $GLOBALS['postgreSQLRegexps'] =& $postgreSQLRegexps;
 
